# town-builder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DJANGO_INCONSISTENCY_TODO.md  Dockerfile  README.md  build_wasm.sh  go.mod  go.sum  physics_wasm.go  physics_wasm.kuki  pyproject.toml
.agent/commands/: prod.md
.agents/commands/: add-model.md
.claude/commands/: dev.md
app/: config.py  main.py
app/models/: schemas.py
app/routes/: batch.py  buildings.py  cursor.py  events.py  history.py  models.py  proxy.py  query.py  scene.py  town.py  ui.py
app/services/: auth.py  batch_operations.py  django_client.py  events.py  history.py  model_loader.py  query.py  scene_description.py  snapshots.py  storage.py  town_helpers.py
app/utils/: geometry.py  normalization.py  security.py  static_files.py
cmd/server/: main.go  main.kuki
docs/: ARCHITECTURE.md  JAVASCRIPT-REVIEW.md  MINIMAX-PLAN.md  PYTHON-REVIEW.md  TECHNICAL-DEBT.md
docs/plans/: kukicha-port.md
internal/config/: config.kuki  main.go
internal/events/: events.kuki
internal/mapx/: mapx.kuki
internal/models/: main.go  schemas.kuki
internal/normalization/: main.go  normalization.kuki  (+2 more)
k8s/: 03-deployment.yaml  04-service.yaml  05-ingress.yaml
scripts/: README.md  brew.sh  clean.sh  dev.sh  prod.sh  setup.sh
templates/: index.html
tests/: conftest.py  test_auth.py  test_batch_operations.py  test_django_client.py  test_normalization.py  test_proxy_routes.py  test_request_limits.py  test_schemas.py  test_security.py  test_storage.py  test_town_routes.py
(+115 files in other folders)
